[package]
name = "frontier-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
frontier-consensus-primitives = { path = "primitives" }
frontier-rpc-primitives = { path = "../rpc/primitives" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "rococo-branch"}
ethereum = { version = "0.3", features = ["codec"] }