[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = "0.1.2"
derive_more = { version = "0.99", optional = true }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.1", optional = true }
impl-trait-for-tuples = "0.2.2"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.8"
scale-info = { version = "2.0", optional = true, default-features = false, features = [ "derive" ] }
serde = { version = "1.0.100", optional = true }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
fp-evm = { workspace = true }
pallet-evmless = { workspace = true }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evmless/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std" ]
