[package]
name = "precompile-utils"
authors = { workspace = true }
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
derive_more = { workspace = true, optional = true, features = ["display"] }
environmental = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
scale-info = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, optional = true }
similar-asserts = { workspace = true, optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

# Frontier
evm = { workspace = true, features = ["with-codec"] }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

# Polkadot / XCM
xcm = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"environmental/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"xcm?/std",
]
codec-xcm = ["xcm"]
testing = ["derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std"]
