[package]
name = "node-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.1"
parity-codec-derive = "2.1"
rlp = { path = "../util/rlp", default-features = false }
rlp-derive = { path = "../util/rlp-derive" }
sr-api = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate" }
srml-support = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
srml-consensus = { git = "https://github.com/paritytech/substrate" }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-session = { git = "https://github.com/paritytech/substrate" }
srml-system = { git = "https://github.com/paritytech/substrate" }
srml-timestamp = { git = "https://github.com/paritytech/substrate" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate" }
sr-version = { git = "https://github.com/paritytech/substrate" }
node-primitives = { path = "../primitives" }
keccak-hasher = { path = "../util/keccak-hasher", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-api/std",
	"sr-std/std",
	"rlp/std",
	"srml-support/std",
	"srml-consensus/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"node-primitives/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"keccak-hasher/std",
]
