[package]
name = "substrate-test-utils"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Substrate test utilities (polkadot v1.15.0)"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { workspace = true }
tokio = { features = ["macros", "time"], workspace = true, default-features = true }

[dev-dependencies]
sc-service = { default-features = true, workspace = true }
trybuild = { features = ["diff"], workspace = true }
