[package]
name = "substrate-trie"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Patricia trie stuff using a parity-codec node format"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[[bench]]
name = "bench"
harness = false

[dependencies]
parity-codec = { version = "2.1" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
rlp = { path = "../util/rlp", default-features = false }
hash-db = { git = "https://github.com/paritytech/trie", default-features = false }
keccak-hasher = { path = "../util/keccak-hasher", optional = true }
trie-db = { git = "https://github.com/paritytech/trie", optional = true }
trie-root = { git = "https://github.com/paritytech/trie", default-features = false }
memory-db = { git = "https://github.com/paritytech/trie", optional = true }

[dev-dependencies]
trie-bench = { git = "https://github.com/paritytech/trie" }
trie-standardmap = { git = "https://github.com/paritytech/trie" }
criterion = "0.1.2"
hex-literal = "0.1.0"

[features]
default = ["std", "rlp/ethereum"]
std = [
	"hash-db/std",
	"substrate-primitives/std",
	"memory-db",
	"keccak-hasher",
	"trie-db",
	"trie-root/std",
	"rlp/std",
]
